--- a/ecommerce/templates/html/search.html
+++ b/ecommerce/templates/html/search.html
@@ -13,21 +13,13 @@
     {% for product in product %}
     <tr>
       <td style="width: 200px; height: 200px;">
-        {% if product.productimage_set.all %} {% for item in
-        product.productimage_set.all %} {% if item.featured %}
-        <img
-          style="
-            width: 100%;
-            height: 100%;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            margin: 0 auto;
-          "
-          src="/media/{{item.image}}"
-          class="card-img-top"
-        />
-        {% endif %} {% endfor %} {% comment %} {% else %}
+        {% if product.productimage_set.all %} 
+          {% for item in product.productimage_set.all %} 
+            {% if item.featured %}
+              <img style=" width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: center; margin: 0 auto;" src="/media/{{item.image}}" class="card-img-top"/>
+        {% endif %} {% endfor %} 
+        {% comment %} 
+        {% else %}
         <div
           style="
             width: 100%;
@@ -35,10 +27,9 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            margin: 0 auto;
-          "
-        ></div>
-        {% endcomment %} {% endif %}
+            margin: 0 auto;"></div>
+        {% endcomment %}
+        {% endif %}
       </td>
       <td><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></td>
       <td>{{ product.salePrice }}</td>
@@ -46,14 +37,9 @@
         {% if not user.is_authenticated %}
         <span><a href='{% url "signin" %}'>Sign In to Add</a></span>
         {%else%}
-        <span
-          ><a href='{% url "update_cart" product.slug %}?qty=1'
-            >Add To Cart</a
-          ></span
-        >
-        {%endif%} {% comment %}
-        <a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a> {%
-        endcomment %}
+        <span><a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a></span>
+        {% endif %} {% comment %}
+        <a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a> {% endcomment %}
       </td>
     </tr>
     {% endfor %}
