--- a/static/assests/cart.css
+++ b/static/assests/cart.css
@@ -1,187 +1,14 @@
-
-  /* Desktops and laptops ----------- */
-@media only screen and (min-width :894px) {
-*{
+@media only screen and (min-width: 1200px) {
+  * {
     padding: 0;
     margin: 0;
-}
-  .container{
     position: relative;
+    box-sizing: border-box;
   }
-  .empty{
-    border: solid 1px black;
-    box-shadow: 3px 3px black;
-    height: 150px;
-    width: 900px;
-    margin-top: 100px;
-    text-align: center;
-    float: right;
+  .container {
+    padding: 1% 5%;
   }
-  #message-empty{
-  padding: 10px 10px;
-  }
-  .container table{
-    margin-top: 50px;
-    margin-left:50px;
-    width:700px;
-  }
-  .table-head{
-    box-shadow: 3px 3px 3px 3px black;
-  }
-
-  .table-bd-content{
-    border: 1px solid grey; 
-    box-shadow: 2px 3px grey;
-  }
-  .checkout{
-    font-size: 20px;
-    color: black
-  }
-  .checkout:hover{
-      color:black;
-      text-decoration: none;
-  }
-  .button-checkout{
-    border: none;
-    background-color: transparent;
-    box-shadow: 0px 0px 10px 0px grey;
-    margin:30px 39%;      
-    font-size: 20px;
-    color: black;
-    border: 2px solid black;
-  }
-  .button-checkout:hover{
-    color:black;
-    text-decoration: none;
-  }
-  .button-checkout:hover, .button-checkout:focus{
-    box-shadow: 0 0.5em 0.5em -0.4em black;
-    transform: translateY(-0.25em);
-    }
-  
-  .material-icons-delete:hover, .material-icons-delete:focus{
-    box-shadow: 0 0.5em 0.5em -0.4em transparent;
-    transform: translateY(-0.25em);
-    }
-    #remove-btn a{
-      text-decoration: none;
-      font-size: 30px;
-      color: black
-    }
-    #remove-btn a:hover, .material-icons-delete:hover{
-      color:gray;
-  }
-  .material-icons-delete{
-    color: black;
-    
-  }
-
-  #button-submit{
-    border: none; 
-    background-color: white;
-
-  }
-  #button-submit:hover{
-    box-shadow: 0 0.5em 0.5em -0.4em transparent;
-    transform: translateY(-0.25em);
-    color: gray;
-  }
-  #remove-btn{
-    border: none;
-    background-color: transparent;
-    text-align: center; 
-    width: 55px;
-  }
-  .tfoot-table{
-    font-weight: bold;
-    margin:10px 38%;
-    font-size: 20px;
-  }
-}
-@media only screen 
-and (max-width :894px) and (min-width: 400px){
-  .container{
-    position: relative;
-  }
-  .container table{
-    text-align: center;
-    font-size: 10px;
-    margin: 30px 50px;
-    width: 250px;
-  }
-  .table-head{
-    box-shadow: 3px 3px 3px 3px black;
-    width:300px;
-  }
-  .table-bd-content{
-    border: 1px solid grey; 
-    box-shadow: 2px 3px grey;
-  }
-
-    .material-icons-delete:hover, .material-icons-delete:focus{
-    box-shadow: 0 0.5em 0.5em -0.4em transparent;
-    transform: translateY(-0.25em);
-    }
-
-    .checkout{
-      font-size: 20px;
-      color: black
-    }
-    .checkout:hover{
-        color:black;
-        text-decoration: none;
-    }
-    .button-checkout{
-      border: none;
-      background-color: transparent;
-      box-shadow: 0px 0px 10px 0px grey;
-      margin:30px 39%;      
-      font-size: 20px;
-      color: black;
-      border: 2px solid black;
-    }
-    .button-checkout:hover{
-      color:black;
-      text-decoration: none;
-    }
-    .button-checkout:hover, .button-checkout:focus{
-      box-shadow: 0 0.5em 0.5em -0.4em black;
-      transform: translateY(-0.25em);
-      }
-    #remove-btn a{
-      text-decoration: none;
-      font-size: 30px;
-      color: black
-    }
-    #remove-btn a:hover, .material-icons-delete:hover{
-      color:gray;
-  }
-  .material-icons-delete{
-    color: black;
-    margin: 3px -5em; 
-  }
-  #button-submit{
-    border: none; 
-    background-color: white;
-  }
-  #button-submit:hover{
-    box-shadow: 0 0.5em 0.5em -0.4em transparent;
-    transform: translateY(-0.25em);
-    color: gray;
-  }
-  #remove-btn{
-    border: none;
-    background-color: transparent;
-    text-align: center; 
-    width: 40px;
-  }
-  
-  .tfoot-table{
-    font-weight: bold;
-    margin:10px 38%;
-    font-size: 20px;
-  }
-  .empty{
+  .empty {
     border: solid 1px black;
     box-shadow: 3px 3px black;
     height: 150px;
@@ -189,7 +16,479 @@ and (max-width :894px) and (min-width: 400px){
     margin-top: 100px;
     text-align: center;
   }
-  #message-empty{
-  padding: 10px 10px;
+  #message-empty {
+    padding: 10px 10px;
+  }
+  .container table {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .table-head {
+    box-shadow: 3px 3px 3px 3px black;
+  }
+
+  .table-bd-content {
+    border: 1px solid grey;
+    box-shadow: 2px 3px grey;
+  }
+  .checkout {
+    font-size: 20px;
+    color: black;
+  }
+  .checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout {
+    border: none;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 0px grey;
+    margin: 30px 39%;
+    font-size: 20px;
+    color: black;
+    border: 2px solid black;
+  }
+  .button-checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout:hover,
+  .button-checkout:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em black;
+    transform: translateY(-0.25em);
+  }
+
+  .material-icons-delete:hover,
+  .material-icons-delete:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+  }
+  #remove-btn a {
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+  }
+  #remove-btn a:hover,
+  .material-icons-delete:hover {
+    color: gray;
+  }
+  .material-icons-delete {
+    color: black;
+  }
+
+  #button-submit {
+    border: none;
+    background-color: white;
+  }
+  #button-submit:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+    color: gray;
+  }
+  #remove-btn {
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    width: 55px;
+  }
+  .tfoot-table {
+    font-weight: bold;
+    margin: 10px 38%;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 1199px) and (min-width: 992px) {
+  .container {
+    position: relative;
+    padding: 1% 3%;
+  }
+  .container table {
+    font-size: 10px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 850px;
+  }
+  .table-head {
+    box-shadow: 3px 3px 3px 3px black;
+    width: 300px;
+  }
+  .table-bd-content {
+    border: 1px solid grey;
+    box-shadow: 2px 3px grey;
+  }
+
+  .material-icons-delete:hover,
+  .material-icons-delete:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+  }
+
+  .checkout {
+    font-size: 20px;
+    color: black;
+  }
+  .checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout {
+    border: none;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 0px grey;
+    margin: 30px 39%;
+    font-size: 20px;
+    color: black;
+    border: 2px solid black;
+  }
+  .button-checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout:hover,
+  .button-checkout:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em black;
+    transform: translateY(-0.25em);
+  }
+  #remove-btn a {
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+  }
+  #remove-btn a:hover,
+  .material-icons-delete:hover {
+    color: gray;
+  }
+  .material-icons-delete {
+    color: black;
+  }
+  #button-submit {
+    border: none;
+    background-color: white;
+  }
+  #button-submit:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+    color: gray;
+  }
+  #remove-btn {
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    width: 40px;
+  }
+
+  .tfoot-table {
+    font-weight: bold;
+    margin: 10px 38%;
+    font-size: 20px;
+  }
+  .empty {
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+    height: 150px;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+  }
+  #message-empty {
+    padding: 10px 10px;
+  }
+}
+@media only screen and (max-width: 991px) and (min-width: 768px) {
+  .container {
+    position: relative;
+    padding: 1% 2%;
+  }
+  .container table {
+    font-size: 10px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+  }
+  .table-head {
+    box-shadow: 3px 3px 3px 3px black;
+    width: 300px;
+  }
+  .table-bd-content {
+    border: 1px solid grey;
+    box-shadow: 2px 3px grey;
+  }
+
+  .material-icons-delete:hover,
+  .material-icons-delete:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+  }
+
+  .checkout {
+    font-size: 20px;
+    color: black;
+  }
+  .checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout {
+    border: none;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 0px grey;
+    margin: 30px 39%;
+    font-size: 20px;
+    color: black;
+    border: 2px solid black;
+  }
+  .button-checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout:hover,
+  .button-checkout:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em black;
+    transform: translateY(-0.25em);
+  }
+  #remove-btn a {
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+  }
+  #remove-btn a:hover,
+  .material-icons-delete:hover {
+    color: gray;
+  }
+  .material-icons-delete {
+    color: black;
+  }
+  #button-submit {
+    border: none;
+    background-color: white;
+  }
+  #button-submit:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+    color: gray;
+  }
+  #remove-btn {
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    width: 40px;
+  }
+
+  .tfoot-table {
+    font-weight: bold;
+    margin: 10px 38%;
+    font-size: 20px;
+  }
+  .empty {
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+    height: 150px;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+  }
+  #message-empty {
+    padding: 10px 10px;
+  }
+}
+@media only screen and (max-width: 767px) and (min-width: 500px) {
+  .container {
+    position: relative;
+    padding: 1% 1%;
+  }
+  .container table {
+    font-size: 10px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
+  }
+  .table-head {
+    box-shadow: 3px 3px 3px 3px black;
+    width: 300px;
+  }
+  .table-bd-content {
+    border: 1px solid grey;
+    box-shadow: 2px 3px grey;
+  }
+
+  .material-icons-delete:hover,
+  .material-icons-delete:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+  }
+
+  .checkout {
+    font-size: 20px;
+    color: black;
+  }
+  .checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout {
+    border: none;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 0px grey;
+    margin: 30px 39%;
+    font-size: 20px;
+    color: black;
+    border: 2px solid black;
+  }
+  .button-checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout:hover,
+  .button-checkout:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em black;
+    transform: translateY(-0.25em);
+  }
+  #remove-btn a {
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+  }
+  #remove-btn a:hover,
+  .material-icons-delete:hover {
+    color: gray;
+  }
+  .material-icons-delete {
+    color: black;
+  }
+  #button-submit {
+    border: none;
+    background-color: white;
+  }
+  #button-submit:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+    color: gray;
+  }
+  #remove-btn {
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    width: 40px;
+  }
+
+  .tfoot-table {
+    font-weight: bold;
+    margin: 10px 38%;
+    font-size: 20px;
+  }
+  .empty {
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+    height: 150px;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+  }
+  #message-empty {
+    padding: 10px 10px;
+  }
+}
+@media only screen and (max-width: 599px) {
+  .container {
+    position: relative;
+    padding: 1% 5%;
+  }
+  .container table {
+    font-size: 10px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 10px;
+    width: 250px;
+  }
+  .table-head {
+    box-shadow: 3px 3px 3px 3px black;
+    width: 300px;
+  }
+  .table-bd-content {
+    border: 1px solid grey;
+    box-shadow: 2px 3px grey;
+  }
+
+  .material-icons-delete:hover,
+  .material-icons-delete:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+  }
+
+  .checkout {
+    font-size: 20px;
+    color: black;
+  }
+  .checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout {
+    border: none;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 0px grey;
+    margin: 30px 39%;
+    font-size: 20px;
+    color: black;
+    border: 2px solid black;
+  }
+  .button-checkout:hover {
+    color: black;
+    text-decoration: none;
+  }
+  .button-checkout:hover,
+  .button-checkout:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em black;
+    transform: translateY(-0.25em);
+  }
+  #remove-btn a {
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+  }
+  #remove-btn a:hover,
+  .material-icons-delete:hover {
+    color: gray;
+  }
+  .material-icons-delete {
+    color: black;
+  }
+  #button-submit {
+    border: none;
+    background-color: white;
+  }
+  #button-submit:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em transparent;
+    transform: translateY(-0.25em);
+    color: gray;
+  }
+  #remove-btn {
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    width: 40px;
+  }
+
+  .tfoot-table {
+    font-weight: bold;
+    margin: 10px 38%;
+    font-size: 20px;
+  }
+  .empty {
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+    height: 150px;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+  }
+  #message-empty {
+    padding: 10px 10px;
   }
 }
